2005-01-13  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/main.c (create_text): Use monospace for the 
	source code view.  (#163526, Theerud Lawtrakul)

	* gtk/gtkaboutdialog.c (gtk_about_dialog_init): Use R as mnemonic
	for the Credits button to avoid duplicate.  (#163465, Tim-Philipp 
	Müller)
	
	* configure.in: Add an OS_LINUX conditional.

	* gdk/Makefile.am (TESTS):
	* gdk-pixbuf/Makefile.am (TESTS):
	* gtk/Makefile.am (TESTS): Only run abicheck on Linux.  (#163917,
	Roger Leigh)

2005-01-13  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtktreeview.c: (gtk_tree_view_class_init),
	(gtk_tree_view_set_headers_clickable): Make the headers-visible
	property readwrite instead of just writable, and remove the
	g_return_if_fail check that there is a model when setting this
	property. Also improve the blurb.  (#163851, Richard Hult)

2005-01-12  Owen Taylor <otaylor@redhat.com>

	* configure.in: Remove GLIB_DIVERT_BEFORE_HELP() on
	initialization of gdktarget, that was causing it to be
	evaluated before host was set. Simplify --with-gdktarget help
	message.

	* gtk/Makefile.am: Use grep | head -n 1 instead of grep -m 1 
	which doesn't work with slightly older versions of GNU grep 
	in install-libtool-import-lib rule.
	
2005-01-12  Tor Lillqvist  <tlillqvist@novell.com>

	Fix for #162790, by Iwan Wong:
	
	* gdk/win32/gdkdrawable-win32.c: Implement dashed lines
	correctly. Simplify the interface to render_line_horizontal() and
	render_line_vertical(). Need to draw lines "manually" also on
	NT-based Windowses if we have a dash offset or are drawing
	double-dashed lines.

	* gdk/win32/gdkprivate-win32.h: Keep also the dash offset,
	double-dash flag, and a brush for the background colour (used by
	the odd dashes in the double-dash line style) in the GdkGCWin32
	struct.

	* gdk/win32/gdkgc-win32.c: Set up above new fields.

2005-01-10  Federico Mena Quintero  <federico@ximian.com>

	Fix #162617.

	* gtk/gtkfilesystemunix.c (STAT_NEEDED_MASK): Take out